adicionando font-family

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <main>
+      <div class="login">
+        <input>
+        <input>
+      </div>
+      <div>
+        <button>Entrar</button>
+      </div>
+    </main>
     <script src="main.js"></script>
   </body>
 </html>
