--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
-      <div class="login">
-        <input>
-        <input>
-      </div>
-      <div>
-        <button>Entrar</button>
-      </div>
+
+    <div class="login-main">
+
+        <div class="login-dados">
+          <input type="email" name="email" id="email" placeholder="login">
+          <input type="password" name="senha" id="senha" placeholder="senha">
+          <button class="entrar">ENTRAR</button>
+        </div>
+
     </main>
+
     <script src="main.js"></script>
   </body>
 </html>
