--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="login-dados">
           <input type="email" name="email" id="email" placeholder="login">
           <input type="password" name="senha" id="senha" placeholder="senha">
-          <button class="entrar">ENTRAR</button>
+          <button class="entrar">Entrar</button>
         </div>
 
     </main>
