--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="login-main">
 
-        <div class="login-dados">
+        <div class="janela">
           <input type="email" name="email" id="email" placeholder="login">
           <input type="password" name="senha" id="senha" placeholder="senha">
           <button class="entrar">Entrar</button>
