--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
 
-    <div class="login-main">
+    <div class="container">
 
-        <div class="janela">
-          <input type="email" name="email" id="email" placeholder="login">
-          <input type="password" name="senha" id="senha" placeholder="senha">
-          <button class="entrar" onclick="entrar()">Entrar</button>
-        </div>
-
-    </main>
+      <div class="janela">
+        <input type="email" name="email" id="email" placeholder="login" />
+        <input type="password" name="senha" id="senha" placeholder="senha" />
+        <button class="botao" id="entrar" onclick="entrar()">Entrar</button>
+      </div>
+      
+    </div>
 
     <script src="main.js"></script>
   </body>
