--- a/hub.html
+++ b/hub.html
@@ -7,17 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
     <div class="container">
-
       <div class="janela">
-        <button class="botao">URNA</button>
+        <button class="botao" id="entrarContagem" onclick="entrarContagem()">
+          URNA
+        </button>
         <button id="hub" class="botao" onclick="iniciarProcesso()">
           Iniciar Processo
         </button>
       </div>
       <button id="hubSair" class="botao sair" onclick="hubSair()">Sair</button>
-
     </div>
     <script src="main.js"></script>
   </body>
