--- a/id_eleitor.html
+++ b/id_eleitor.html
@@ -9,9 +9,9 @@
  <body>
     <div class="container">
 
-        <div class="janela_id">
+        <div class="janela">
             <input type="number" name="id_eleitor" id="id_eleitor" placeholder="id do eleitor">
-            <button id="id_eleitor" class="botao botaoID" onclick="entrarUrna()">Entrar</button>
+            <button id="id_eleitor" class="botao" onclick="entrarUrna()">Entrar</button>
         </div>
 
         <a class="voltar_button" href="hub.html" src>
