adicionando autofocus na pag. do id do eleitor

--- a/id_eleitor.html
+++ b/id_eleitor.html
@@ -10,7 +10,7 @@
     <div class="container">
 
         <div class="janela">
-            <input type="number" name="id_eleitor" id="id_eleitor" placeholder="id do eleitor">
+            <input type="number" name="id_eleitor" id="id_eleitor" placeholder="id do eleitor" autofocus>
             <button id="id_eleitor" class="botao" onclick="entrarUrna()">Entrar</button>
         </div>
 
