--- a/hub.html
+++ b/hub.html
@@ -9,8 +9,11 @@
   <body>
     <div class="container">
       <div class="janela">
+        <button class="botao" id="cadastrarChapas" onclick="entrarCadastrarChapas()">
+          Cadastro de chapas
+        </button>
         <button class="botao" id="entrarContagem" onclick="entrarContagem()">
-          URNA
+          Contagem de Votos
         </button>
         <button id="hub" class="botao" onclick="iniciarProcesso()">
           Iniciar Processo
