adicionando botão de cadastro

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="email" name="email" id="email" placeholder="login" />
         <input type="password" name="senha" id="senha" placeholder="senha" />
         <button class="botao" id="entrar" onclick="entrar()">Entrar</button>
+        <button class="botao" id="cadastrar" onclick="cadastrar()">Cadastro</button>
       </div>
       
     </div>
