--- a/Hub mesário/id_eleitor.html
+++ b/Hub mesário/id_eleitor.html
@@ -10,13 +10,21 @@
     <div class="container">
 
         <div class="janela">
-            <input type="number" name="id_eleitor" id="id_eleitor" placeholder="id do eleitor">
+            <input type="text" name="id_eleitor" id="id_eleitor" placeholder="id do eleitor">
             <button id="id_eleitor" class="botao" onclick="entrarUrna()">Entrar</button>
         </div>
 
         <a class="voltar_button" href="hub.html" src>
             <img src="image/icons/voltar_button.png" alt="Voltar">
         </a>
+        <script>
+                window.addEventListener('DOMContentLoaded', (event) => {
+                     const n_chapInput = document.getElementById('id_eleitor');
+                    n_chapInput.addEventListener('input', function() {
+                     this.value = this.value.replace(/[^0-9]/g, '');
+        });
+    });
+        </script>
         <script src="main.js"></script>
  </body>
  </html>
