--- a/Hub mesário/cadastroAdmin.html
+++ b/Hub mesário/cadastroAdmin.html
@@ -9,21 +9,20 @@
   <body>
     <div class="container">
       <div class="janela">
-        <form class="formContainer" id="registerForm">
-          <label for="register">Nome:</label>
+        <form id="registerForm" class="formContainer">
+          <label for="register">Usuário:</label>
           <input type="text" id="register" name="register">
           <label for="registerPassword">Senha:</label>
           <input type="password" id="registerPassword" name="registerPassword">
-          <label for="role">Função:</label>
+          <label for="role">Role:</label>
           <select id="role" name="role">
-              <option value="ADMIN">Administrador</option>
-              <option value="USER">Usuário</option>
-          </select><br>
-          <button class="botao cadastrar" type="submit">Cadastrar</button>
-          <button id="hubSair" class="botao sair" onclick="hubSair()">Voltar</button>
+              <option value="ADMIN">Admin</option>
+              <option value="USER">User</option>
+          </select>
+          <button type="submit" class="botao">Cadastrar</button>
       </form>
+        <button id="hubSair" class="botao sair" onclick="hubSair()">Voltar</button>
       </div>
-    </div>
     </div>
 
     <script src="main.js"></script>
