--- a/Hub mesário/hub.html
+++ b/Hub mesário/hub.html
@@ -9,11 +9,15 @@
   <body>
     <div class="container">
       <div class="janela">
-        <button class="botao" id="cadastrarChapas" onclick="entrarCadastrarChapas()">
-          Cadastro de chapas
+        <button class="botao" id="cadastrarChapas" onclick="entrarHubChapas()">
+          Gerenciar Candidatos/Chapas
         </button>
-        <button class="botao" id="cadastrarEleitor" onclick="entrarCadastrarEleitor()">
-          Cadastro de eleitor
+        <button
+          class="botao"
+          id="cadastrarEleitor"
+          onclick="entrarHubEleitor()"
+        >
+          Gerenciar Eleitores
         </button>
         <button class="botao" id="entrarContagem" onclick="entrarContagem()">
           Contagem de Votos
